Gallery builder - Select and Back buttons overlap (bugid:4302)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@36998 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaPhotoGallery/css/WikiaPhotoGallery.editor.css
+++ b/extensions/wikia/WikiaPhotoGallery/css/WikiaPhotoGallery.editor.css
@@ -205,7 +205,7 @@ img.WikiaPhotoGalleryProgress {
 
 #WikiaPhotoGallerySearchResultsSelect {
 	float: right;
-	margin-top: 5px;
+	display: none;
 }
 
 #WikiaPhotoGallerySearchResults.WikiaPhotoGalleryProgress ul {
